secao 3 mobile terminada

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="css/header.css" />
         <link rel="stylesheet" href="css/style.css" />
-
+        <link rel="stylesheet" href="css/venda-curso.css" />
         <link rel="stylesheet" href="css/cards.css" />
         <link rel="stylesheet" href="css/common.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -109,6 +109,17 @@
             <div class="buttons flex-container mobile header-align">
                 <button>TENHO INTERESSE</button>
                 <button>COMPRAR AGORA</button>
+            </div>
+        </section>
+        <section class="venda-curso">
+            <div class="venda-curso__title flex-container padding-container">
+                <div class="mesh-txt">
+                    Chegou a sua hora de brilhar lorem ipsum dolor sit amet
+                </div>
+            </div>
+            <div class="venda-curso__button flex-container">
+                <p>R$ 5.000,00</p>
+                <button>FAZER O CURSO</button>
             </div>
         </section>
     </body>
