secao 3 responsividade completa

--- a/index.html
+++ b/index.html
@@ -111,11 +111,9 @@
                 <button>COMPRAR AGORA</button>
             </div>
         </section>
-        <section class="venda-curso">
+        <section class="venda-curso flex-container">
             <div class="venda-curso__title flex-container padding-container">
-                <div class="mesh-txt">
-                    Chegou a sua hora de brilhar lorem ipsum dolor sit amet
-                </div>
+                <p>Chegou a sua hora de brilhar lorem ipsum dolor sit amet</p>
             </div>
             <div class="venda-curso__button flex-container">
                 <p>R$ 5.000,00</p>
