concluida metodologias e responsividade

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/expand.css" />
         <link rel="stylesheet" href="css/professores.css" />
         <link rel="stylesheet" href="css/carousel.css" />
+        <link rel="stylesheet" href="css/metodologia.css" />
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick-theme.css">
@@ -310,6 +311,52 @@
                     mesmo"</p>
                 <h3>fulano de tal, <br> médico muito conceituado</h3>
             </div>
+        </section>
+        <section class="metodologia padding-container">
+            <div>
+                <div class="top-square"></div>
+                <h2 class="header-align">Capacidade de Aprender</h2>
+                <p class="header-align"> <span> Esta seção visa explicar as metodologias de ensino empregadas.</span>
+                    Lorem ipsum dolor sit
+                    amet,
+                    consectetur
+                    adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer
+                    quis.
+                    Iaculis urna id
+                    volutpat lacus laoreet. Mauris vitae.</p>
+                <div class="buttons flex-container desktop header-align">
+                    <button class="button-interesse">TENHO INTERESSE</button>
+                    <button class="button-comprar">COMPRAR AGORA</button>
+                </div>
+            </div>
+
+            <div class="metodologia-bullet flex-container">
+                <div>
+                    <h4>Metodologia 1</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div>
+                    <h4>Metodologia 1</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div>
+                    <h4>Metodologia 1</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+                <div>
+                    <h4>Metodologia 1</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+                </div>
+            </div>
+            <div class="buttons flex-container mobile">
+                <button class="button-interesse">TENHO INTERESSE</button>
+                <button class="button-comprar">COMPRAR AGORA</button>
+            </div>
+        </section>
+        <section class="aptidao">
+            <div class="top-square"></div>
+            <h2 class="header-align">Capacidade de Aprender</h2>
         </section>
         <script src="script/script.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
