--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="stylesheet" href="css/professores.css" />
         <link rel="stylesheet" href="css/carousel.css" />
         <link rel="stylesheet" href="css/metodologia.css" />
+        <link rel="stylesheet" href="css/aptidao.css" />
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick-theme.css">
@@ -48,12 +49,11 @@
                 <div class="top-square"></div>
                 <h2 class="header-align">Sem clientes?</h2>
                 <p class="header-align">
-                    <span>Esta seção visa explicar resumidamente o curso.</span><br />
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Bibendum est ultricies integer quis. Iaculis urna id
-                    volutpat lacus laoreet. Mauris vitae ultricies leo integer
-                    malesuada. Ac odio tempor
+                    <span> Esta seção visa explicar quem é a persona que o curso quer atingir.</span> Lorem ipsum dolor
+                    sit amet, consectetur adipiscing
+                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies
+                    integer quis. Iaculis
+                    urna id volutpat lacus laoreet. Mauris vitae.
                 </p>
                 <div class="buttons flex-container desktop header-align">
                     <button class="button-interesse">TENHO INTERESSE</button>
@@ -354,9 +354,22 @@
                 <button class="button-comprar">COMPRAR AGORA</button>
             </div>
         </section>
-        <section class="aptidao">
+        <section class="aptidao padding-container">
             <div class="top-square"></div>
-            <h2 class="header-align">Capacidade de Aprender</h2>
+            <h2 class="header-align">Eu estou Apto?</h2>
+            <p class="header-align"> <span> Esta seção visa explicar as metodologias de ensino empregadas.</span>
+                Lorem ipsum dolor sit
+                amet,
+                consectetur
+                adipiscing elit,
+                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Bibendum est ultricies integer
+                quis.
+                Iaculis urna id
+                volutpat lacus laoreet. Mauris vitae.</p>
+            <div class="buttons flex-container">
+                <button class="button-interesse">TENHO INTERESSE</button>
+                <button class="button-comprar">COMPRAR AGORA</button>
+            </div>
         </section>
         <script src="script/script.js"></script>
         <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
