--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             <div class="cards flex-container">
                 <div class="card">
                     <div class="card__img flex-container">
-                        <img src="src/mind.png" alt="imagem de cabeca pensante" />
+                        <img src="src/mind.png" alt="imagem do professor" title="imagem do professor"
+                            title="imagem do curso" />
                     </div>
                     <h3>OBJETIVO</h3>
                     <p>
@@ -76,7 +77,8 @@
                 </div>
                 <div class="card">
                     <div class="card__img flex-container">
-                        <img src="src/mind.png" alt="imagem de cabeca pensante" />
+                        <img src="src/mind.png" alt="imagem do professor" title="imagem do professor"
+                            title="image do curso" />
                     </div>
                     <h3>METODOLOGIA</h3>
                     <p>
@@ -86,7 +88,8 @@
                 </div>
                 <div class="card">
                     <div class="card__img flex-container">
-                        <img src="src/mind.png" alt="imagem de cabeca pensante" />
+                        <img src="src/mind.png" alt="imagem do professor" title="imagem do professor"
+                            title="imagem do curso" />
                     </div>
                     <h3>METODOLOGIA</h3>
                     <p>
@@ -96,7 +99,8 @@
                 </div>
                 <div class="card">
                     <div class="card__img flex-container">
-                        <img src="src/mind.png" alt="imagem de cabeca pensante" />
+                        <img src="src/mind.png" alt="imagem do professor" title="imagem do professor"
+                            title="iamgem do curso" />
                     </div>
                     <h3>METODOLOGIA</h3>
                     <p>
@@ -202,7 +206,7 @@
                 <div class="flex-container">
                     <div class="professores__card card">
                         <div class="flex-container">
-                            <img src="src/professor.png" alt="imagem de cabeca pensante" />
+                            <img src="src/professor.png" alt="imagem do professor" title="imagem do professor" />
                         </div>
                         <h3>FULANO DE TAL, <br>phd em comunicação</h3>
                         <p>
@@ -216,7 +220,7 @@
                     </div>
                     <div class="professores__card card">
                         <div class="flex-container">
-                            <img src="src/professor.png" alt="imagem de cabeca pensante" />
+                            <img src="src/professor.png" alt="imagem do professor" title="imagem do professor" />
                         </div>
                         <h3>FULANO DE TAL, <br>phd em comunicação</h3>
                         <p>
@@ -230,7 +234,7 @@
                     </div>
                     <div class="professores__card card">
                         <div class="flex-container">
-                            <img src="src/professor.png" alt="imagem de cabeca pensante" />
+                            <img src="src/professor.png" alt="imagem do professor" title="imagem do professor" />
                         </div>
                         <h3>FULANO DE TAL, <br>phd em comunicação</h3>
                         <p>
@@ -246,7 +250,7 @@
                 <div class="desktop flex-container">
                     <div class="professores__card card">
                         <div class="flex-container">
-                            <img src="src/professor.png" alt="imagem de cabeca pensante" />
+                            <img src="src/professor.png" alt="imagem do professor" title="imagem do professor" />
                         </div>
                         <h3>FULANO DE TAL, <br>phd em comunicação</h3>
                         <p>
@@ -260,7 +264,7 @@
                     </div>
                     <div class="professores__card card">
                         <div class="flex-container">
-                            <img src="src/professor.png" alt="imagem de cabeca pensante" />
+                            <img src="src/professor.png" alt="imagem do professor" title="imagem do professor" />
                         </div>
                         <h3>FULANO DE TAL, <br>phd em comunicação</h3>
                         <p>
@@ -274,7 +278,7 @@
                     </div>
                     <div class="professores__card card">
                         <div class="flex-container">
-                            <img src="src/professor.png" alt="imagem de cabeca pensante" />
+                            <img src="src/professor.png" alt="imagem do professor" title="imagem do professor" />
                         </div>
                         <h3>FULANO DE TAL, <br> phd em comunicação</h3>
                         <p>
@@ -358,7 +362,7 @@
             </div>
         </section>
         <section class="aptidao">
-            <div><img class="desktop" src="src/apto-desktop.png" alt=""></div>
+            <div><img class="desktop" src="src/apto-desktop.png" alt="imagem de fundo" title="background"></div>
             <div class="aptidao-info padding-container">
                 <div class="top-square"></div>
                 <h2 class="header-align">Eu estou Apto?</h2>
@@ -395,10 +399,12 @@
                 <h5>LOREM</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore</p>
-                <input type="text" name="inputBox" placeholder="Nome">
-                <input type="text" name="inputBox" placeholder="Telefone">
-                <input type="text" name="inputBox" placeholder="E-mail">
-                <input type="text" name="inputBox" placeholder="Profissão">
+                <div class="modal__text-inputs flex-container">
+                    <input type="text" name="inputBox" placeholder="Nome">
+                    <input type="text" name="inputBox" placeholder="Telefone">
+                    <input type="text" name="inputBox" placeholder="E-mail">
+                    <input type="text" name="inputBox" placeholder="Profissão">
+                </div>
                 <div class="modal__check flex-container">
                     <input type="checkbox">
                     <label for=""> Li e aceito os <span> termos de uso.</span></label>
