alt nas imagens

--- a/index.html
+++ b/index.html
@@ -400,10 +400,10 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore</p>
                 <div class="modal__text-inputs flex-container">
-                    <input type="text" name="inputBox" placeholder="Nome">
-                    <input type="text" name="inputBox" placeholder="Telefone">
-                    <input type="text" name="inputBox" placeholder="E-mail">
-                    <input type="text" name="inputBox" placeholder="Profissão">
+                    <input type="text" name="nome" placeholder="Nome" required>
+                    <input type="text" name="tel" placeholder="Telefone" required>
+                    <input type="text" name="email" placeholder="E-mail" required>
+                    <input type="text" name="profissao" placeholder="Profissão" required>
                 </div>
                 <div class="modal__check flex-container">
                     <input type="checkbox">
