melhoras na responsividade de altura

--- a/index.html
+++ b/index.html
@@ -402,7 +402,8 @@
                 <div class="modal__text-inputs flex-container">
                     <input type="text" name="nome" placeholder="Nome" required>
                     <input type="text" name="tel" placeholder="Telefone" required>
-                    <input type="text" name="email" placeholder="E-mail" required>
+                    <input type="text" name="email" placeholder="E-mail" required
+                        pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$">
                     <input type="text" name="profissao" placeholder="Profissão" required>
                 </div>
                 <div class="modal__check flex-container">
