--- a/index.html
+++ b/index.html
@@ -298,22 +298,22 @@
             </div>
         </section>
         <section class="carousel">
-            <div id="carousel__card" class="flex-container padding-container">
+            <div class="flex-container padding-container carousel__card">
                 <p>"Quando eu fiz esse curso, eu fui muito feliz e eu quero fazer de novo agora porque é muito bom
                     mesmo"</p>
                 <h3>fulano de tal, <br> médico muito conceituado</h3>
             </div>
-            <div id="carousel__card" class="flex-container padding-container">
+            <div class="flex-container padding-container carousel__card">
                 <p>"Quando eu fiz esse curso, eu fui muito feliz e eu quero fazer de novo agora porque é muito bom
                     mesmo"</p>
                 <h3>fulano de tal, <br> médico muito conceituado</h3>
             </div>
-            <div id="carousel__card" class="flex-container padding-container">
+            <div class="flex-container padding-container carousel__card">
                 <p>"Quando eu fiz esse curso, eu fui muito feliz e eu quero fazer de novo agora porque é muito bom
                     mesmo"</p>
                 <h3>fulano de tal, <br> médico muito conceituado</h3>
             </div>
-            <div id="carousel__card" class="flex-container padding-container">
+            <div class="flex-container padding-container carousel__card">
                 <p>"Quando eu fiz esse curso, eu fui muito feliz e eu quero fazer de novo agora porque é muito bom
                     mesmo"</p>
                 <h3>fulano de tal, <br> médico muito conceituado</h3>
@@ -421,7 +421,8 @@
         <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.js"></script>
-        <script>$('.carousel').slick();</script>
+        <script>$('.carousel').slick(
+            );</script>
     </body>
 
 </html>
